# dec64-rs

./: Cargo.toml  README.md
benches/: ops.rs
src/: cmp.rs  consts.rs  diyfp.rs  fmt.rs  from.rs  grisu2.rs  lib.rs  math.rs  more_consts.rs  ops.rs  write.rs
src/from/: diyfp.rs  grisu2.rs
tests/: abs.rs  add.rs  ceil.rs  div.rs  floor.rs  mul.rs  neg.rs  pack.rs  round.rs  tests.rs
