[package]
name = "dec64"
version = "0.2.0"
edition = "2024"
authors = [
	"kleines Filmröllchen <kleines@filmroellchen.eu>",
	"Maciej Hirsz <maciej.hirsz@gmail.com>",
]
description = "DEC64 number type"
repository = "https://github.com/kleinesfilmroellchen/dec64-rs"
license = "MIT"

[features]
std = []
default = ["std"]

[lints.clippy]
all = "deny"

[lints.rust]
unused = "deny"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ops"
harness = false
